# justsayit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  filters.example.json  flake.nix  install.sh  pyproject.toml
docs/: configuration.md  install.md  postprocessing.md
evals/: IMPROVING.md  README.md  cleanup_openai_cases.toml  profile-gpt-5.4-mini.toml
evals/runs/: baseline-v2.json  baseline-v3.json  baseline.json  final-gpt-5.4-honest.json  final-gpt-5.4-mini.json  final-v2.json  final-v3-hey-only.json  final-v3-honest-judge.json  final.json  gpt-5-mini-reasoning-medium.json  gpt-5.4-mini-low.json  gpt-5.4-mini-reasoning-medium.json  gpt-5.4-nano-high-tuned.json  gpt-5.4-nano-low-tuned.json  gpt-5.4-nano-low.json  gpt-5.4-nano-medium-tuned.json  gpt-5.4-nano-reasoning-medium.json  variant-a.json  variant-b.json
scripts/: bump-version.py  eval-cleanup-prompt.py
sounds/: generate_sounds.py
src/justsayit/: __init__.py  __main__.py  _boot.py  _entry.py  _http.py  _subcommands.py  audio.py  cli.py  config.py  filters.py  model.py  overlay.py  paste.py  pipeline.py  postprocess.py  shortcuts.py  snippets.py  sound.py  toggle_client.py  tools.py  transcribe.py  transcribe_openai.py  transcribe_parakeet.py  transcribe_whisper.py  tray.py  update_check.py  window_info.py
src/justsayit/config/: __init__.py  _io.py  _schema.py
src/justsayit/postprocess/: __init__.py  _models.py  _processor.py  _profile.py  backend_local.py  backend_remote.py  backend_responses.py
src/justsayit/prompts/: cleanup_gemma.md  cleanup_local.md  cleanup_openai.md  cleanup_openai_nano.md  cleanup_qwen_simple.md  cleanup_remote.md  fun.md
tests/: conftest.py  test_audio.py  test_burn_cross_backend_image.py  test_burn_parakeet_normalize.py  test_burn_parakeet_synthetic_fixtures.py  test_burn_postprocess.py  test_burn_responses_image.py  test_cli_show_defaults.py  test_config.py  test_continue_session.py  test_filters.py  test_handle_segment.py  test_model.py  test_overlay_callback_signatures.py  test_overlay_markdown_extras.py  test_overlay_markdown_tables.py  test_overlay_scroll.py  test_overlay_smoke.py  test_paste_read_clipboard.py  test_pipeline_redo.py  test_pipeline_routing.py  test_postprocess.py  test_snippets.py  test_transcribe.py  test_transcribe_openai.py  test_transcribe_parakeet_chunking.py  test_update_check.py  test_window_policy.py
(+13 files in other folders)
