[project]
name = "justsayit"
version = "0.2.0"
description = "Local Parakeet-powered voice dictation with a Wayland layer-shell overlay"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "horo" }]
dependencies = [
    "sherpa-onnx>=1.10",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "platformdirs>=4.2",
    "PyGObject>=3.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
justsayit = "justsayit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justsayit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.uv]
# PyGObject builds against system headers; rely on system-site-packages venv
# for gi.repository bindings (gtk4, gtk4-layer-shell) already installed via pacman.
